[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://icons/menu.png" type="Texture" id=7]
[ext_resource path="res://Sidebar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Info.tscn" type="PackedScene" id=12]

[sub_resource type="InputEventKey" id=1]
control = true
command = true
scancode = 77

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Info" parent="." instance=ExtResource( 12 )]

[node name="Split" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = -16.0
split_offset = 160
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" parent="Split" instance=ExtResource( 9 )]
margin_bottom = 552.0

[node name="Editors" type="Control" parent="Split"]
margin_left = 173.0
margin_right = 1024.0
margin_bottom = 552.0

[node name="Tabs" type="Tabs" parent="."]
anchor_right = 1.0
margin_left = 40.0
margin_bottom = 32.0
tab_align = 0
tab_close_display_policy = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MenuButton" parent="."]
margin_right = 36.0
margin_bottom = 32.0
mouse_filter = 1
mouse_default_cursor_shape = 2
shortcut = SubResource( 2 )
icon = ExtResource( 7 )
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open file", null, 0, false, false, 1, 0, null, "", false, "Open folder", null, 0, false, false, 2, 0, null, "", false, "Save", null, 0, false, false, 3, 0, null, "", false, "Save as", null, 0, false, false, 4, 0, null, "", false, "Toggle sidebar", null, 0, false, false, 5, 0, null, "", false, "Settings", null, 0, false, false, 6, 0, null, "", true, "Increase font size", null, 0, false, false, 7, 0, null, "", false, "Decrease font size", null, 0, false, false, 8, 0, null, "", false ]
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.125
anchor_top = 0.217
anchor_right = 0.875
anchor_bottom = 0.853
margin_top = -0.200012
margin_right = -6.10352e-05
margin_bottom = 0.200012
window_title = "Открыть файл"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="resized" from="." to="." method="_on_Main_resized"]
[connection signal="tab_changed" from="Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="tab_close" from="Tabs" to="." method="_on_Tabs_tab_close"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
